gitops/apps/rustfs/rustfs-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rustfs
  namespace: rustfs
spec:
  parentRefs:
    - name: gateway
      namespace: istio-system
      sectionName: http   # listener name on the Gateway
  hostnames:
    - "rustfs.vps.kubespaces.cloud"  # Change this to your actual domain
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /dashboard
      backendRefs:
        - name: rustfs-rustfs-svc
          port: 9001
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: rustfs-rustfs-svc
          port: 9000
